# Consigne-de-casier

./: Bagage.cpp  Bagage.hpp  BagageCylindre.cpp  BagageCylindre.hpp  BagagePyramide.cpp  BagagePyramide.hpp  BagageRectangle.cpp  BagageRectangle.hpp  CMakeLists.txt  Consigne.cpp  Consigne.hpp  Ticket.cpp  Ticket.hpp  Type.hpp  VConsigne.cpp  VConsigne.hpp  main.cpp  makefile  run.out
